@@ -2,6 +2,8 @@ debhelper (10.2.6) UNRELEASED; urgency=medium
 
   * Supply PKG_CONFIG for cross compilation with the makefile buildsystem.
     (Closes: #853881)
+  * Disable stripping during dh_auto_* in makefile buildsystem in compat 11.
+    (Closes: #844077)
 
  -- Helmut Grohne <helmut@subdivi.de>  Sat, 18 Feb 2017 17:49:08 +0000
 
